hphp/test/slow/hack_mode/2206.php.expectf
HipHop Fatal error: Argument 1 passed to t() must be of type ?X, int given in %s on line 3
